<resources>
    <string name="app_name">MedReminder</string>
    <string name="recordatorio">Reminder</string>
    <string name="titulo_recordatorio">Reminder title</string>
    <string name="MDH">Minutes/hours/days</string>

    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="aaaa">YYYY</string>
    <string name="pleca">/</string>

    <string name="valor_intervalo">Interval value</string>
    <string name="permanente">Permanent</string>
    <string name="fecha_final">Final date</string>
    <string name="dd_mm_aaa">dd/mm/aaa</string>
    <string name="logo_de_app"> app logo</string>
    <string name="personas"> People</string>
    <string name="recordatorios">Reminders</string>
    <string name="medication_reminder">Med Reminder</string>
    <string name="buscar">Search </string>
    <string name="agregar_persona"> Add person</string>
    <string name="nombre"> Name</string>
    <string name="guardar">Save</string>
    <string name="cancelar">Cancel</string>
    <string name="icono_medicamento">Medicine icon</string>
    <string name="medicamento">Medicine</string>
    <string name="icono_historia">History icon</string>
    <string name="historial">Record</string>
    <string name="medicamentos">Medicines</string>
    <string name="dosificacion">Dosage</string>
    <string name="dosis">Dose</string>
    <string name="tomar">Drink</string>
    <string name="comentario">Comentary</string>
    <string name="tipo">\Kind: \</string>
    <string name="seleccionar">To select</string>
    <string name="datos_de_dosis">Dose data</string>
    <string name="universo_desarrollo" translatable="false">Universo Desarrollo</string>
    <string name="editar">Edit</string>
    <string name="eliminar">Rimuovere</string>
    <string name="mensaje_eliminar_persona">Are you sure you want to delete this person and all their records?</string>
    <string name="titulo_eliminar_persona">Confirm delete person</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="campos_vacios">The fields cannot be left blank.</string>
    <string name="yaexiste_med">\"There is already a drug called\"</string>
    <string name="med_insertado">Correctly registered medicine.</string>
    <string name="error">An error occurred while saving.</string>
    <string name="no_hay_elementos">Nothing was found.</string>
    <string name="error_update">A problem occurred while modifying.</string>
    <string name="id">\Number: \</string>
    <string name="dosificacion2">\Dosage: \</string>
    <string name="dosis2">\Dose: \</string>
    <string name="fecha2">\Date: \</string>
    <string name="estado2">\State: \</string>
    <string name="comentario2">\Commentary: \</string>
    <string name="salir">Get out</string>
    <string name="editar_medicamento">Edit Medication</string>
    <string name="med_reminder" translatable="false">MED REMINDER</string>
    <string name="nombre_del_medicamento">Medication name</string>
    <string name="tipo2">\Kind: \</string>
    <string name="busquedanoencontrada">There are no items for this search.</string>
    <string name="medicamento2">\Medication: \</string>
    <string name="guardar_cambios">Save Changes</string>
    <string name="tipo_de_medicamento">Medication type</string>
    <string name="nuevo_medicamento">New Medicine</string>
    <string name="aplication_reminder" translatable="false">APLICATION REMINDER</string>
    <string name="editar_persona">Edit Person</string>
    <string name="fecha_invalida">Invalid date</string>
    <string name="error_guardar">An error occurred while saving</string>
    <string name="fecha_mayor_cero">The interval value must be greater than 0</string>
    <string name="preg_eliminar_medicLista">Do you want to remove this medicine from your reminder list?</string>
    <string name="eliminar_medicLista">Remove medication from reminder</string>
    <string name="time">Time</string>
    <string name="tomado">Drunk</string>
    <string name="no_tomado">Not drunk</string>
    <string name="retrasado">Postpone</string>
    <string name="estado_i0">State</string>
    <string name="persona_guardada">Correctly registered person</string>
    <string name="update_ok">It has been successfully updated</string>
    <string name="persona_existe">There is already a person with that name</string>
    <string name="persona_delete">Person deleted correctly</string>
    <string name="error_eliminar">Error when deleting</string>
    <string name="error_seleccionar">Error when selecting</string>
    <string name="pregunta_salir">Are you sure you want to leave Med Reminder?</string>
    <string name="minutos">Minutes</string>
    <string name="horas">Hours</string>
    <string name="dias">Days</string>
    <string name="semanas">Weeks</string>
    <string name="en_curso">In progress</string>
    <string name="terminado">Not active</string>
    <string name="Fecha_inicio">\Start date: \</string>
    <string name="intervalo">\Interval: \</string>
    <string name="alarmacreada">Medication alarm!</string>
    <string name="alarmademedicamentoscancela">Medication alarm canceled!</string>
    <string name="nuevaalarmacreada">New medication alarm created!</string>
    <string name="presionapara_gestionar">" Press to manage medications"</string>
    <string name="debe_agregar_med">You must add medication before activating the reminder</string>
    <string name="ejemplo">Example: 500mg</string>

    <string-array name="EstadoR_valores">
        <item>State</item>
        <item>In progress</item>
        <item>Not active</item>
    </string-array>

    <string-array name="MDH_valores">
        <item>Select</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
    </string-array>

</resources>