<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFEADB"
    android:padding="15dp"
    tools:context=".Editar_Recordatorio">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="#000000"
        android:text="@string/med_reminder"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recordatorio"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/etTitRecordatorioEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:hint="@string/titulo_recordatorio"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <Spinner
                android:id="@+id/spnMDHEdit"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#000000"
                android:entries="@array/MDH_valores"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MDH"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_weight="1"/>
        </LinearLayout>

        <EditText
            android:id="@+id/etValorIntervaloEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/valor_intervalo"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:importantForAutofill="no" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <RadioButton
                android:id="@+id/radPEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="PermanenteEdit"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="@string/permanente" />
            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">-->
            <RadioButton
                android:id="@+id/radFFinalEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_final"
                android:onClick="noPermanenteEdit"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_weight="1"/>
            <!--<CalendarView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dateTextAppearance="@id"/>-->

            <!--</LinearLayout>-->
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/etDiaEdit"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:hint="@string/dd"
                android:inputType="number"
                android:importantForAutofill="no" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/pleca"/>
            <EditText
                android:id="@+id/etMesEdit"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:hint="@string/mm"
                android:inputType="number"
                android:textSize="18sp"
                android:textColor="#000000"
                android:importantForAutofill="no" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/pleca"/>
            <EditText
                android:id="@+id/etAnioEdit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/aaaa"
                android:inputType="number"
                android:textSize="18sp"
                android:textColor="#000000"
                android:importantForAutofill="no" />
        </LinearLayout>
        <Spinner
            android:id="@+id/spnEstadoEdit"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:entries="@array/EstadoR_valores"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvValidarReEdit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:onClick="GuardarEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/guardar"
            android:background="#FF9A76"
            android:textSize="20sp" />
        <Button
            android:onClick="CancelarEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#679B9B"
            android:text="@string/cancelar"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>