<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".medicamento_recordatorio"
    android:padding="20dp">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_de_app"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/medicamentos"
        android:textSize="28sp"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:id="@+id/tvMedicamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Medicamento"
                    android:textSize="24sp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"/>
                <Button
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:background="@android:drawable/ic_delete"/>
                <Button
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:background="@android:drawable/ic_menu_edit"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/tvDosificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dosificacion"
                    android:textSize="18sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/tvDosis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dosis"
                    android:textSize="18sp"/>
            </TableRow>
            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/tomar"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>