<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFEADB"
    android:padding="15dp"
    tools:context=".Elegir_medicamento">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/med_reminder"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicamento"
        android:layout_marginBottom="20dp"
        android:textColor="#000000"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/etBuscarM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="Buscar por nombre del medicamento"
        android:layout_marginBottom="10dp"
        android:textColor="#000000"
        android:importantForAutofill="no"
        android:inputType="text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/lyConMedicinas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nombre"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tipo"
                    android:textColor="#000000"
                    android:textSize="18sp"/>
            </TableRow>
            <TableRow>
                <Button
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="#FF9A76"
                    android:text="@string/seleccionar"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>